# shroombox

./: .gitignore  datacollect.py  e false  neo.py  neo_single.py  noctua_pwm.py  scd30.py  test_timedelta.py  transistor_blaeser.py
SuperShrooms/: db_utils.py  noctua_pwm.py  shroombox2.py  supershrooms.py  tapo115.py
SuperShrooms/config/: settings.json
SuperShrooms/tests/: 2secfunc.py  humidity.py  picture.py
SuperShrooms/web/: app.py  test_flask.py
projects/: shroombox2
shroombox2/: .env  changelog.txt  heater.py  humidity.py  influx.py  metz_relay.py  neo_single.py  noctua_pwm.py  nohup.out  picam.py  requirements.txt  run_every_s_m_h.py  scd30.py  shroombox2.code-workspace  shroombox2.py  tapo115.py  test.py  todo.txt
shroombox2/frontend/: Cargo.toml  index.html
shroombox2/frontend/src/: app.rs  main.rs
shroombox2/frontend/src/components/: log_widget.rs  phase_widget.rs
shroombox2/test_programs/: cam.py  influx27.py  light_status.py  mygpio.py  mypigpio.py  mystreamlit.py  quit_whileloop.py  return.py  slider_value.json  takepic.py  time.py  (+1 more)
shroombox3/: .env  .gitignore  README.md  alpine_js_frontend_fix.txt  cleanup_plan.md  init_devices.py  logging_setup.py  main.py  main.py.backup  make_settings_editable.sh  noctua_pwm.py  run_web.sh  scd30_controller.py  scd30_test.py  settings_manager.py  shroombox-main.service  shroombox3.code-workspace  start_web.sh  tapo_controller.py  tapo_ip_finder.py  test_device_toggle.py  test_environment_controller.py  test_heater.py  test_heater_simple.py  test_setpoints.py  test_temperature_control.py  todo.txt
(+160 files in other folders)
