[package]
name = "shroombox-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.20"
gloo-net = "0.2"
gloo-events = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gridstack = "0.1"  # Example, would need to create Rust bindings for GridStack 